--- a/css/index.css
+++ b/css/index.css
@@ -291,6 +291,11 @@ html *::-webkit-scrollbar-track {
     letter-spacing: 1px;
 }
 
+.welcome__item img {
+    width: 100px;
+    height: 100px;
+}
+
 .welcome__col {
     padding: 2rem;
 }
@@ -413,7 +418,7 @@ html *::-webkit-scrollbar-track {
 /* TEAM */
 
 .team {
-    background-image: url("../img/BR-TEAM.png");
+    background-image: url("../img/background-team.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     padding: 70px 0;
@@ -435,7 +440,6 @@ html *::-webkit-scrollbar-track {
 .team__content {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    /* Adjust the minmax values as needed */
     width: 80%;
     margin: 0 auto;
     gap: 25px 30px;
@@ -575,7 +579,6 @@ html *::-webkit-scrollbar-track {
 /* OUR STATS */
 
 .ourStats {
-    /* background-image: url(../img/banner1.jpg); */
     background-attachment: fixed;
     background-size: cover;
 }
@@ -652,7 +655,6 @@ html *::-webkit-scrollbar-track {
 .offer__item h3 {
     font-size: 20px;
     color: var(--primary-color);
-    ;
     margin: 25px 0 20px;
 }
 
@@ -674,7 +676,7 @@ html *::-webkit-scrollbar-track {
 /* FEEDBACK */
 
 .feedback {
-    background: url(../img/BR-FB.png) center;
+    background: url("../img/background-feedback.png") center;
     background-attachment: fixed;
     background-size: cover;
 }
@@ -938,7 +940,6 @@ footer {
 
 .footer__contact i {
     font-size: 1.3rem;
-    /* border: 1px solid var(--primary-color-2); */
     color: white;
     text-align: center;
     line-height: 32px;
@@ -985,7 +986,6 @@ footer {
 }
 
 .quick-contact__button {
-    /* background-image: linear-gradient(0, #52c7e9, #92d5e9); */
     width: 70px;
     height: 43px;
     border: none;
@@ -1144,11 +1144,9 @@ footer {
 @media screen and (max-width:991.98px) {
     /* HEADER */
     .navInstruction .navbar-brand p:first-child {
-        /* 3% so với width của trình duyệt */
         font-size: 3vw;
     }
     .navInstruction .navbar-brand p:last-child {
-        /* 1.5% so với width của trình duyệt */
         font-size: 1.5vw;
     }
 }
@@ -1231,61 +1229,86 @@ footer {
     }
 }
 
+
+/* Add a media query for screens with a maximum width of 768px */
+
+@media (max-width: 768px) {
+    .welcome__content>p {
+        font-size: 1.4rem;
+        padding-bottom: 2rem;
+    }
+    .welcome__item h3 {
+        font-size: 1.6rem;
+    }
+    .welcome__item h4 {
+        font-size: 1.2rem;
+    }
+    .welcome__item p {
+        font-size: 1rem;
+    }
+    .welcome__col {
+        padding: 1rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .welcome__content>p {
+        font-size: 1.3rem;
+        padding-bottom: 1rem;
+    }
+    .welcome__item h3 {
+        font-size: 1.5rem;
+    }
+    .welcome__item h4 {
+        font-size: 1.1rem;
+    }
+    .welcome__item p {
+        font-size: 0.9rem;
+    }
+    .welcome__col {
+        padding: 0.5rem;
+    }
+}
+
 @media screen and (min-width:575px) and (max-width:992px) {
     .feedback__bottom {
         width: 85%;
     }
 }
 
-
-/* TEAM */
-
 .news__content .col-xl-7 {
     margin-left: 0;
-    /* Reset the left margin for larger screens */
 }
 
 @media (max-width: 991px) {
     .news__content .col-xl-7 {
         width: 100%;
         margin-left: 0;
-        /* Reset the left margin for medium screens */
     }
     .news__content .img2 {
         width: 100%;
         height: auto;
-        /* Adjust height to maintain aspect ratio */
         margin-left: 0;
-        /* Reset the left margin for medium screens */
     }
 }
 
 @media (max-width: 767px) {
     .news__content .row {
         flex-direction: column;
-        /* Stack the columns vertically on smaller screens */
     }
     .news__content .img2 {
         width: 100%;
-        /* Set the image to take up full width on smaller screens */
         max-width: 300px;
-        /* Set a maximum width for the image */
         height: auto;
-        /* Adjust height to maintain aspect ratio */
         margin-left: 0;
-        /* Reset the left margin for smaller screens */
     }
 }
 
 @media (max-width: 768px) {
     .team__content {
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        /* Adjust the minmax values as needed for smaller screens */
     }
 }
-
-
-/* Add a media query for screens with a maximum width of 480px */
 
 @media (max-width: 480px) {
     .team {
