--- a/css/index.css
+++ b/css/index.css
@@ -292,8 +292,8 @@ html *::-webkit-scrollbar-track {
 }
 
 .welcome__item img {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
 }
 
 .welcome__col {
@@ -419,9 +419,8 @@ html *::-webkit-scrollbar-track {
 
 .team {
     background-image: url("../img/background-team.png");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    padding: 70px 0;
+    background-attachment: fixed;
+    background-size: cover;
 }
 
 .team .heading p::after {
@@ -578,33 +577,19 @@ html *::-webkit-scrollbar-track {
 
 /* OUR STATS */
 
-.ourStats {
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-.ourStats .heading p::after {
-    content: '';
-    width: 70px;
-    height: 2px;
-    background-color: white;
-    display: block;
-    margin: 20px auto;
-}
-
 .ourStats__content {
     text-align: center;
     color: white;
 }
 
 .ourStats__item img {
-    width: 70px;
-    height: 70px;
+    width: 100px;
+    height: 100px;
 }
 
 .ourStats__item h3 {
-    font-size: 1.3rem;
-    letter-spacing: 3px;
+    font-size: 2rem;
+    letter-spacing: 2px;
     font-weight: bold;
     margin: 30px 0 20px;
     color: var(--primary-color);
@@ -653,7 +638,6 @@ html *::-webkit-scrollbar-track {
 }
 
 .offer__item h3 {
-    font-size: 20px;
     color: var(--primary-color);
     margin: 25px 0 20px;
 }
@@ -1328,4 +1312,34 @@ footer {
     .team__details {
         width: 100%;
     }
+}
+
+@media screen and (max-width: 768px) {
+  .ourStats__item h3 {
+    font-size: 1.5rem;
+  }
+
+  .ourStats__item sup {
+    font-size: 1.5rem;
+  }
+
+  .ourStats__item p {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .ourStats__item h3 {
+    font-size: 1.2rem;
+    margin: 20px 0 10px;
+  }
+
+  .ourStats__item sup {
+    font-size: 1.2rem;
+    top: -20px;
+  }
+
+  .ourStats__item p {
+    font-size: 2.5rem;
+  }
 }
