--- a/css/index.css
+++ b/css/index.css
@@ -34,7 +34,7 @@ html *::-webkit-scrollbar-track {
 }
 
 .heading h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--primary-color);
     font-weight: bold;
     letter-spacing: 0.5px;
@@ -104,13 +104,25 @@ html *::-webkit-scrollbar-track {
     transition: all 0.5s;
     
 }
-.header__left a {
-    width: 50px;
-    height: 50px;
-    padding: 10px;
-    margin-right: 10px;
-  }
 
+.header__left a{
+    width: 100%;
+    height: 10px;
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+.header__left p {
+    margin: 0;
+    display: -webkit-box;
+    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.header__left i {
+    margin-right: 6px;
+}
 .header__right a {
     width: 30px;
     height: 30px;
@@ -596,7 +608,7 @@ html *::-webkit-scrollbar-track {
 }
 
 .ourStats__item h3 {
-    font-size: 2rem;
+    font-size: 1.6rem;
     letter-spacing: 2px;
     font-weight: bold;
     margin: 30px 0 20px;
@@ -721,6 +733,7 @@ html *::-webkit-scrollbar-track {
 
 .feedback__content .feedback__bottom img {
     width: 28%;
+    height: 100%;
     display: inline-block;
 }
 
@@ -997,13 +1010,20 @@ footer {
     position: fixed;
     display: block;
     bottom: 40px;
-    left: 50px;
+    left: 30px;
     background-color: var(--primary-color);
     border-radius: 50%;
     background: linear-gradient(to bottom, var(--primary-color-2), var(--primary-color));
     box-shadow: 1px 5px 7px -2px rgba(0, 0, 0, 0.35);
     cursor: pointer;
     z-index: 999;
+}
+
+.quick-alo-phone:hover,
+.quick-alo-zalo:hover,
+.quick-alo-mes:hover{
+    transform: scale(1.1);
+    transition: all 0.3s;
 }
 
 .quick-alo-phone i {
@@ -1018,8 +1038,6 @@ footer {
     text-decoration: none;
     padding: 14px;
     z-index: 1;
-    transition-timing-function: ease-out;
-    transition: all .2s;
 }
 
 .quick-alo__fill {
@@ -1055,8 +1073,8 @@ footer {
 .quick-alo-zalo {
     position: fixed;
     display: block;
-    bottom: 150px;
-    left: 50px;
+    bottom: 140px;
+    left: 30px;
     border-radius: 50%;
     box-shadow: 1px 5px 7px -2px rgba(0, 0, 0, 0.35);
     cursor: pointer;
@@ -1068,6 +1086,22 @@ footer {
     display: block;
     height: auto;
     z-index: 999;
+}
+
+.quick-alo-mes {
+    position: fixed;
+    display: block;
+    bottom: 240px;
+    left: 30px;
+    border-radius: 50%;
+    box-shadow: 1px 5px 7px -2px rgba(0, 0, 0, 0.35);
+    cursor: pointer;
+    z-index: 999;
+}
+
+.quick-alo-mes img {
+    width: 52px;
+    height: 52px;
 }
 
 @keyframes skill5 {
@@ -1249,16 +1283,32 @@ footer {
         padding-bottom: 1rem;
     }
     .welcome__item h3 {
+        display: flex;
+        justify-content: center;
         font-size: 1.5rem;
     }
     .welcome__item h4 {
         font-size: 1.1rem;
+        display: flex;
+        justify-content: center;
     }
     .welcome__item p {
         font-size: 0.9rem;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+    .welcome__item img {
+        margin: 10px auto;
+        display: flex;
+        justify-content: center;
     }
     .welcome__col {
         padding: 0.5rem;
+    }
+
+    .hide-on-mobile {
+        display: none;
     }
 }
 
