--- a/css/card.css
+++ b/css/card.css
@@ -3,10 +3,14 @@
   margin: 40px auto;
   border: none;
 }
-
-.card__product .card__top img {
+/* for carousel */
+/* .card__product .card__top img {
   width: 250px;
   height: 300px;
+} */
+.card__product .card__top img {
+  width: 100%;
+  height: 100%;
 }
 
 .card__product .card__right .card-body {
@@ -15,7 +19,6 @@
 .card__product .card__right .card-title {
   font-size: 24px;
   font-weight: 700;
-  inline-size: 70%;
 }
 
 .card__product .card__right .card__price-first {
@@ -31,8 +34,14 @@
   font-weight: 500;
 }
 
-.card__product .card__right .list-group-item {
+/* .card__product .card__right .list-group-item {
   inline-size: 70%;
+} */
+.card__product .card__right .list-group-item .item-content{
+  margin-left: 145px;
+}
+.card__product .card__right .list-group-item .function-content{
+  margin-left: 115px;
 }
 .card__product .card__right .list-group-item i {
   color: #4786fe;
